--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        node: [15.x, 14.x, 12.x, 10.x]
+        node: [16.x, 14.x, 12.x]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
