--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -30,5 +30,5 @@ jobs:
         node-version: ${{ matrix.node }}
     - run: |
         yarn install --frozen-lockfile
-        yarn test
+        yarn lint
       working-directory: ./cli
