--- a/cli/package.json
+++ b/cli/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "compile": "babel index.js -o dist/babel.js && ncc build dist/babel.js -o dist && rimraf dist/babel.js",
+    "compile": "babel index.js -o dist/babel.js && ncc build dist/babel.js -o dist -m && rimraf dist/babel.js",
     "run": "yarn compile && node dist/index.js",
     "lint": "eslint index.js",
     "prepublishOnly": "yarn clean && yarn compile"
@@ -48,7 +48,6 @@
     "ink-big-text": "^1.2.0",
     "ink-gradient": "^2.0.0",
     "ink-select-input": "^4.2.0",
-    "meow": "^9.0.0",
     "open": "^8.2.1",
     "react": "^16.x",
     "rimraf": "^3.0.2"
