include xdg-open in package

--- a/cli/package.json
+++ b/cli/package.json
@@ -22,7 +22,7 @@
     "node": "^12 || ^14 || >=16"
   },
   "files": [
-    "dist/index.js"
+    "dist"
   ],
   "bin": {
     "jakejarvis": "./dist/index.js"
