--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -16,11 +16,10 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
         node: [16.x, 14.x, 12.x]
       fail-fast: false
-    runs-on: ${{ matrix.os }}
-    name: Node ${{ matrix.node }} on ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    name: Node ${{ matrix.node }}
     steps:
     - uses: actions/checkout@v2
       with:
