--- a/cli/package.json
+++ b/cli/package.json
@@ -31,44 +31,34 @@
     "jakejarvis": "./dist/index.js"
   },
   "scripts": {
-    "clean": "rimraf dist",
-    "babel": "babel index.js -o dist/unbundled.js",
-    "ncc": "ncc build dist/unbundled.js -m -o dist",
-    "build": "run-s clean babel ncc",
+    "build": "node build.js",
     "run": "yarn build && node dist/index.js",
-    "lint": "eslint .",
-    "prepublishOnly": "run-s lint build"
+    "prepublishOnly": "yarn build",
+    "lint": "eslint ."
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/core": "^7.15.5",
     "@babel/preset-react": "^7.14.5",
     "@jakejarvis/eslint-config": "*",
     "@vercel/ncc": "^0.30.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fs-extra": "^10.0.0",
     "ink": "^3.0.9",
     "ink-big-text": "^1.2.0",
     "ink-gradient": "^2.0.0",
     "ink-select-input": "^4.2.0",
-    "npm-run-all": "^4.1.5",
     "open": "^8.2.1",
-    "react": "^16.x",
-    "rimraf": "^3.0.2"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
+    "pretty-bytes": "^5.6.0",
+    "react": "^17.0.2"
   },
   "eslintConfig": {
     "extends": [
       "@jakejarvis/eslint-config",
       "plugin:react/recommended",
+      "plugin:react/jsx-runtime",
       "plugin:react-hooks/recommended"
     ],
     "parserOptions": {
@@ -85,6 +75,7 @@
       }
     },
     "ignorePatterns": [
+      "tmp/**",
       "dist/**"
     ]
   }
