--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -14,19 +14,14 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        node: [16.x, 14.x, 12.x]
-      fail-fast: false
     runs-on: ubuntu-latest
-    name: Node ${{ matrix.node }}
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
     - uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node }}
+        node-version: 14
     - run: |
         yarn install --frozen-lockfile
         yarn lint
