--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -13,11 +13,11 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: 16.x
         registry-url: https://registry.npmjs.org/
-    - run: |
-        yarn install --frozen-lockfile
-        yarn publish
+    - run: yarn install --frozen-lockfile
+      working-directory: ./cli
+    - run: yarn publish
       working-directory: ./cli
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -29,12 +29,12 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: 16.x
         registry-url: https://npm.pkg.github.com/
         scope: '@jakejarvis'
-    - run: |
-        yarn install --frozen-lockfile
-        yarn publish
+    - run: yarn install --frozen-lockfile
+      working-directory: ./cli
+    - run: yarn publish
       working-directory: ./cli
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
