--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -21,7 +21,7 @@ jobs:
         fetch-depth: 1
     - uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: 16.x
     - run: |
         yarn install --frozen-lockfile
         yarn lint
