--- a/cli/package.json
+++ b/cli/package.json
@@ -28,13 +28,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@jakejarvis/eslint-config": "github:jakejarvis/eslint-config#main",
-    "@vercel/ncc": "^0.33.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-react": "^7.16.7",
+    "@jakejarvis/eslint-config": "*",
+    "@vercel/ncc": "^0.33.3",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.4",
     "ink": "^3.2.0",
     "ink-big-text": "^1.2.0",
     "ink-gradient": "^2.0.0",
@@ -50,8 +49,7 @@
     "extends": [
       "@jakejarvis/eslint-config",
       "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:react-hooks/recommended"
+      "plugin:react/jsx-runtime"
     ],
     "parserOptions": {
       "ecmaVersion": 2018,
