--- a/cli/package.json
+++ b/cli/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "node build.js",
     "run": "yarn build && node dist/index.cjs",
-    "lint": "eslint . --ext js,cjs",
+    "lint": "eslint . --ext js,jsx",
     "prepublishOnly": "yarn build"
   },
   "dependencies": {},
