--- a/cli/package.json
+++ b/cli/package.json
@@ -30,13 +30,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "@jakejarvis/eslint-config": "*",
-    "@vercel/ncc": "^0.33.4",
+    "@types/node": "*",
+    "@types/react": "^18.0.15",
+    "@vercel/ncc": "^0.34.0",
     "cpy": "^9.0.1",
-    "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
     "ink": "^3.2.0",
     "ink-big-text": "^1.2.0",
     "ink-gradient": "^2.0.0",
@@ -44,35 +46,11 @@
     "mkdirp": "^1.0.4",
     "open": "^8.4.0",
     "pretty-bytes": "^6.0.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "tempy": "^3.0.0"
   },
   "engines": {
     "node": ">=10"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@jakejarvis/eslint-config",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime"
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "env": {
-      "node": true,
-      "es6": true
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "ignorePatterns": [
-      "tmp/**",
-      "dist/**"
-    ]
   },
   "keywords": [
     "cli",
